// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContents renders 1`] = `
<div
  aria-label="Table of contents"
  className="container"
  role="navigation"
>
  <div
    className="box marginBottom3 paddingX3"
  >
    <h3
      className="Heading fontSize400 default alignStart breakWord"
    >
      Title
    </h3>
  </div>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box inverse pill"
            style={
              Object {
                "minWidth": 4,
              }
            }
          />
          <div
            className="item itemPadding nestingIndentation1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Item
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TableOfContents renders an accessibility label 1`] = `
<div
  aria-label="Page table of contents"
  className="container"
  role="navigation"
>
  <div
    className="box marginBottom3 paddingX3"
  >
    <h3
      className="Heading fontSize400 default alignStart breakWord"
    >
      Title
    </h3>
  </div>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box inverse pill"
            style={
              Object {
                "minWidth": 4,
              }
            }
          />
          <div
            className="item itemPadding nestingIndentation1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Item
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TableOfContents renders nested items 1`] = `
<div
  aria-label="Table of contents"
  className="container"
  role="navigation"
>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box pill transparent"
            style={
              Object {
                "minWidth": 4,
              }
            }
          />
          <div
            className="item itemPadding nestingIndentation1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Item 1
            </div>
          </div>
        </div>
      </a>
      <ul
        className="flex flexColumn m0 p0"
      >
        <li
          className="noStyle marginTop1"
        >
          <a
            className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            rel=""
            tabIndex={0}
          >
            <div
              className="Flex rowGap0 columnGap0 xsDirectionRow"
            >
              <div
                className="box inverse pill"
                style={
                  Object {
                    "minWidth": 4,
                  }
                }
              />
              <div
                className="item itemPadding nestingIndentation2"
              >
                <div
                  className="default alignStart breakWord Text fontSize200 fontWeightSemiBold"
                >
                  Subitem 1
                </div>
              </div>
            </div>
          </a>
        </li>
        <li
          className="noStyle marginTop1"
        >
          <a
            className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            rel=""
            tabIndex={0}
          >
            <div
              className="Flex rowGap0 columnGap0 xsDirectionRow"
            >
              <div
                className="box pill transparent"
                style={
                  Object {
                    "minWidth": 4,
                  }
                }
              />
              <div
                className="item itemPadding nestingIndentation2"
              >
                <div
                  className="default alignStart breakWord Text fontSize200 fontWeightNormal"
                >
                  Subitem 2
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`TableOfContents renders without title 1`] = `
<div
  aria-label="Table of contents"
  className="container"
  role="navigation"
>
  <ul
    className="flex flexColumn m0 p0"
  >
    <li
      className="noStyle marginTop1"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box inverse pill"
            style={
              Object {
                "minWidth": 4,
              }
            }
          />
          <div
            className="item itemPadding nestingIndentation1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Item 1
            </div>
          </div>
        </div>
      </a>
    </li>
    <li
      className="noStyle marginTop1"
    >
      <a
        className="noOutline inheritColor noUnderline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box pill transparent"
            style={
              Object {
                "minWidth": 4,
              }
            }
          />
          <div
            className="item itemPadding nestingIndentation1"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightNormal"
            >
              Item 2
            </div>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;
